Pixel perfect - index and modal Fix footer overflow Fix catalog height and overflow Fix min-height index (features) Fix height and overflow index (insteresting?) Refactor catalog header (- margin + padding) Fix Catalog - subscribe Fix Catalog subscribe section

--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ h2 {
   justify-content: center;
   align-items: center;
   width: 400px;
-  height: 384px;
+  min-height: 384px;
 
 }
 
@@ -427,20 +427,17 @@ h2 {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 417px;
+  padding-top: 5px;
+  padding-bottom: 90px;
 }
 
 .subscribe {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
-  height: 411px;
-}
+  min-height: 411px;
+  padding: 10px 0 30px 0;
 
-.catalog_subscribe {
-  margin-top: -20px;
-  min-height: 470px;
 }
 
 .catalog_subscribe > p {
@@ -450,6 +447,7 @@ h2 {
   line-height: 26px;
   text-align: center;
   color: #333333;
+  padding-top: 20px;
 
 }
 
@@ -463,8 +461,7 @@ h2 {
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
-  color: #FFFFFF;
-  margin-top: 100px;
+  color: #333333;
 }
 
 .catalog_subscribe > h2 {
@@ -486,9 +483,8 @@ h2 {
 }
 
 .subscribe__paragraph {
-  color: #FFFFFF;
+  color: #333333;
   width: 520px;
-  margin-top: 15px;
 }
 
 .subscribe__background {
@@ -614,7 +610,7 @@ footer {
   display: flex;
   height: 120px;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -642,16 +638,15 @@ footer {
 
 }
 
-
 .footer__social {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  margin-left: 60px;
+  margin-left: 55px;
   margin-top: 10px;
-  max-width: 300px;
   flex-wrap: wrap;
+  width: 300px;
 }
 
 .footer__social > li {
@@ -668,18 +663,13 @@ footer {
 }
 
 .footer__phone {
-
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
   font-size: 40px;
   font-weight: 400;
   line-height: 40px;
   text-align: center;
   text-decoration: none;
   margin-top: 10px;
-
+  margin-left: 80px;
 }
 
 
@@ -715,6 +705,7 @@ footer {
   justify-content: flex-end;
   align-items: center;
   margin-right: 72px;
+  margin-left: auto;
 
 }
 
@@ -754,13 +745,14 @@ footer {
 .search-filters {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 173px;
-  grid-column-gap: 0;
-  grid-row-gap: 0;
-  background-image: url("../src/images/catalog-background.png");
+  /*grid-auto-rows: 173px;*/
+  background-image: url("../src/images/catalog-background.png") ;
+  background-size: cover;
   background-color: #8BB2CF;
-  height: 408px;
+  background-overflow: visible;
   margin-top: -5px;
+  padding-bottom: 63px;
+  padding-left: 70px;
 }
 
 .search-filters__title {
@@ -770,7 +762,7 @@ footer {
   max-width: 500px;
   grid-area: 1 / 1 / 2 / 4;
   align-self: flex-start;
-  margin-left: 71px;
+  margin-bottom: 43px;
   justify-content: flex-start;
   align-items: center;
 
@@ -833,7 +825,7 @@ footer {
 
 .search-form {
   display: flex;
-
+  justify-content: flex-start;
 }
 
 .search-filters__infrastructure {
@@ -841,11 +833,13 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  margin-left: 56px;
+  /*margin-left: 56px;*/
 }
 
 .search-filters__fieldset {
   border: 0;
+  padding-bottom: 10px;
+  padding-left: 0px;
 
 }
 
@@ -1065,7 +1059,6 @@ input[type=range]:focus::-webkit-slider-runnable-track {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  vertical-align: center;
   text-transform: uppercase;
   color: #FFFFFF;
   border: 3px solid transparent;
@@ -1248,6 +1241,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 }
 
 .page-button {
+  font-family: PT Sans, Arial, serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1376,6 +1370,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
   display: grid;
   grid-template-columns: minmax(300px, 400px);
   grid-template-rows: auto;
+  padding-bottom: 50px;
 
 }
 
@@ -1562,7 +1557,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 .search-navigation {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  /*margin-top: 50px;*/
   padding: 30px 0 0 0;
   border: 1px solid #E6E6E6;
   min-height: 100px;
@@ -1572,9 +1567,9 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 .search-navigation__links {
   display: flex;
   justify-content: flex-start;
-  margin-left: 72px;
-  margin-top: 22px;
-  padding-left: 3px;
+  margin-left: 70px;
+  /*margin-top: 22px;*/
+  padding: 20px 0 0 3px;
 }
 
 .modal {
@@ -1629,7 +1624,8 @@ input[type=range]:focus::-webkit-slider-runnable-track {
   border: none;
   border-radius: 50%;
   padding: 5px 0 0 0;
-  margin-left: 30px;
+  margin-left: 20px;
+  margin-bottom: -5px;
   cursor: pointer;
 }
 
